--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -8,7 +8,7 @@
 <body>
      <h1> All About Me</h1>
      <h2> Hello!!! My name is Cameron</h2>
-     <img src  ="images/demo3.jpeg"width="142"height="182">
+     <img src  ="images/demo3.jpeg"width=""height="182">
      <h2>Info about me:</h2>
      <p>My name is Cameron Woodward, and I'm from Bristol, Indiana. I am a freshman here, and this is my first semester.</p>
      <p>I'm studying Computer Engineering & Programming.</p>
