--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -14,8 +14,7 @@
         </header>
         <main>
             <h1>Brigham Young University</h1>
-            <img
-            src="https://www.byui.edu/images/service-sites/map-banner.jpg"
+            <img src="https://www.byui.edu/images/service-sites/map-banner.jpg"
             alt="BYUI Campus"
             />
             <p>BYU-Idaho is a comfortable place to learn and grow as a disciple of Jesus Christ because students, faculty, and employees share a commitment to live the gospel.</p>
