Made the positioning.html

--- a/challenge/index.html
+++ b/challenge/index.html
@@ -24,13 +24,12 @@
             <h2>3. Baptism by immerson for the remission of sins</h2>
             <h2>4. Laying on of hands for the gift of the Holy Ghost</h2>
         </div>
-
-
         <img src="images/President-Russell-M-Nelson-1-2018.jpg" length="205" height="240">
         <div id="quote">
-        <p>"Because of the Antonement, His gospel provides an invitation to keep changing, growing, and becomimg more
-            pure."
-        </p>
+            <p>"Because of the Antonement, His gospel provides an invitation to keep changing, growing, and becomimg
+                more
+                pure.
+            </p>
         </div>
         <footer>
             <p>Russell M. Nelson President of the Church of Jesus Christ of Latter-Day Saints</p>
