--- a/mario/site-plan.html
+++ b/mario/site-plan.html
@@ -127,8 +127,8 @@
         [Written copy for the home page here]
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/mariofranchise.jpeg" alt="image for homepage">
+        <img src="images/mario.png" alt="image for homepage">
 
       </ul>
       <h3>[Page 2]</h3>
@@ -136,8 +136,8 @@
         [Written copy for the Page 2 here]
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/Super_Mario_Odyssey.jpg" alt="image for page">
+        <img src="images/Super_Mario_Bros._box.png" alt="image for page">
 
       </ul>
       <h3>[Page 3]</h3>
@@ -145,8 +145,8 @@
         [Written copy for the Page 3 here]
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/MarioNSMBUDeluxe.png" alt="image for page3">
+        <img src="images/Bowser_Stock_Art_2021.png" alt="image for page3">
 
       </ul>
       <hr>
@@ -160,7 +160,7 @@
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/Homewireframe.jpg" alt="home page wireframe">
 
       <h3>[Page 2]</h3>
       <p>         
