--- a/mario/site-plan.html
+++ b/mario/site-plan.html
@@ -166,13 +166,13 @@
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/Subpage2.jpeg" alt="page 2 wireframe">
 
       <h3>[Page 3]</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/Subpage3.jpg" alt="page 3 wireframe">
     </main>
   </body>
 
