Made the home page for my website

--- a/mario/index.html
+++ b/mario/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="content">
         <header>
-            <img src="images/rsz_mario_series_logosvg.png" alt="web site logo">
+            <img id="franchise" src="images/rsz_mario_series_logosvg.png" alt="web site logo">
             <nav>
                 <a href="index.html">Home Page</a>
                 <a href="history.html">History</a>
@@ -18,10 +18,10 @@
         </header>
         <main class="home-main">
             <div id="hero">
-                <img src="images/mariofranchise.jpeg" alt="Mario Franchise">
-                <h2>Super Mario Fan Site</h2>
+                <img id="hero-img" src="images/mariofranchise.jpeg" alt="Mario Franchise">
             </div>
-            <img src="images/mario.png" alt="Mario">
+                <h2>Super Mario Fan Site</h2>
+            <img id="mario" src="images/mario.png" alt="Mario">
             <div id="intro">
                 <h1>Intro</h1>
                 <p>Super Mario is a platform games series created by Nintendo on October 1985, starring the mascot, Mario. It is the central series of the greater Mario franchise. At least one Super Mario game has been released for every major Nintendo console. There are more than 20 games in the series.</p>
