--- a/mario/history.html
+++ b/mario/history.html
@@ -1,11 +1,148 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+
+<head>33
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
+
 <body>
-    
+    <div id="content">
+        <header>
+            <img id="franchise" src="images/rsz_mario_series_logosvg.png" alt="web site logo">
+            <nav>
+                <a href="index.html">Home Page</a>
+                <a href="history.html">History</a>
+                <a href="franchise.html">Franchise</a>
+            </nav>
+        </header>
+        <h1>History</h1>
+        <p>Super Mario has been on many adventures to save Princess Peach. Here are some of the Super Mario games that are still enjoyable today.</p>
+        <button class="accordion">Super Mario Bros</button>
+        <div class="panel">
+           <img src="images/Super_Mario_Bros._box.png">
+           <h2>Released: October 1985</h2>
+           <h2>Platform: Nintendo Entertainment System (NES)</h2>
+           <h2>Plot:</h2>
+           <p>Super Mario Bros is set in the fantasy land of the Mushroom Kingdom after Mario and Luigi had arrived through a clay pipe from New York City.</p>
+           <p>In the Mushroom Kingdom, a tribe of Koopa Troopas invade the kingdom and uses the magic of its king, Bowser, to turn its inhabitants, the Toads, into inanimate objects. They also kidnap Princess Peach, the princess of the Mushroom Kingdom and the only one with the ability to reverse Bowser's spell. After hearing the news, the brothers set out to save the princess and free the kingdom from Bowser.</p>
+        </div>
+        <button class="accordion">Super Mario Bros 2</button>
+        <div class="panel">
+           <img src="images/Super_Mario_Bros_2.jpg">
+           <h2>Released: September 1988</h2>
+           <h2>Platform: Nintendo Entertainment System (NES)</h2>
+           <h2>Plot:</h2>
+           <p>Mario has a dream of a staircase leading to a mysterious door to a mysterious place. A voice identifies the world as the dreamland of Subcon, and asks for Mario's help in defeating the villainous frog named Wart, a tyrant who has cursed Subcon and its people. Mario suddenly awakes and decides to tell Luigi, Toad, and Princess Peach, who all report experiencing the same dream.</p>
+        </div> 
+        <button class="accordion">Super Mario Bros 3</button>
+        <div class="panel">
+           <img src="images/Super_Mario_Bros3.jpg">
+           <h2>Released: February 12, 1990</h2>
+           <h2>Platform: Nintendo Entertainment System (NES)</h2>
+           <h2>Plot:</h2>
+           <p>The Mushroom World is invaded by the Koopalings, Bowser's seven children. The Koopalings conquer each of the seven kingdoms by stealing its king's magical wand and using it to transform him into an animal. Princess Peach sends Mario and Luigi to travel to each kingdom to retrieve the stolen wand, and restore the kings back to normal, and to save Princess Peach from Bowser. 
+        </p>
+        </div> 
+        <button class="accordion">Super Mario World</button>
+        <div class="panel">
+           <img src="images/Super_Mario_World.jpg">
+           <h2>Released: August 23, 1991</h2>
+           <h2>Platform: Super Nintendo Entertainment System (SNES)</h2>
+           <h2>Plot:</h2>
+           <p>Following the events in Super Mario Bros. 3, Mario and Luigi decide to go on vacation with Princess Peach to a place called Dinosaur Land. While resting on the beach, Princess Peach is captured by Bowser. When Mario and Luigi wake up, they try to find her and, they eventually come across a giant egg that suddenly hatches and comes out a young dinosaur named Yoshi, who tells them he and his dinosaur friends have been imprisoned in eggs by the Koopalings. Mario and Luigi soon realize that Bowser's forces must have captured Peach as well, so Mario, Luigi and Yoshi set out to save Peach and Yoshi's dinosaur friends, traversing through Dinosaur Land for Bowser and his Koopalings.
+        </p>
+        </div> 
+        <button class="accordion">Super Mario 64</button>
+        <div class="panel">
+           <img src="images/Super_Mario64.jpg">
+           <h2>Released: September 30, 1996</h2>
+           <h2>Platform: Nintendo 64 (N64)</h2>
+           <h2>Plot:</h2>
+           <p>The game begins with a letter from Princess Peach inviting Mario to come to her castle for a cake she has baked for him. When he arrives, Mario discovers that Bowser has invaded the castle and imprisoned the princess and her servants within its walls using the power of the castle's 120 Power Stars. The Power Stars are hidden in the castle's paintings, which serve as portals to other worlds where Bowser's minions keep watch over the Stars. Mario explores the castle and enters these worlds, gaining access to more rooms as he recovers more Stars. 
+        </p>
+        </div> 
+        <button class="accordion">Super Mario Sunshine</button>
+        <div class="panel">
+           <img src="images/Super_mario_sunshine.jpg">
+           <h2>Released: August 26, 2002</h2>
+           <h2>Platform:</h2>
+           <h2>Plot: GameCube</h2>
+           <p>This game takes place on Isle Defino, a dolphin-shaped tropical island mainly inhabited by the Pianta and Noki people.</p>
+           <p>Mario sets out for Isle Delfino for a vacation with Princess Peach, her steward Toadsworth, and a group of five Toads. Upon arrival at Delfino Airstrip, they discover a mass of paint-like goop. After acquiring the Flash Liquidizing Ultra Dousing Device (F.L.U.D.D.), a water cannon created by Professor E. Gadd, Mario defeats a slime-covered Piranha Plant that emerges from the goop. However, Mario is arrested on suspicion of vandalizing the island with graffiti, which has caused the source of the island's power, Shine Sprites, to disappear and the island to be covered in shadow. After being convicted, Mario is assigned community service to clean up the island and track down the real criminal behind this.
+        </p>
+        </div> 
+        <button class="accordion">Super Mario Galaxy</button>
+        <div class="panel">
+           <img src="images/Super_Mario_Galaxy.jpg">
+           <h2>Released: November 14, 2007</h2>
+           <h2>Platform: Wii</h2>
+           <h2>Plot:</h2>
+           <p>The centennial Star Festival is held to watch a comet in the Mushroom Kingdom. Mario is invited by Princess Peach to the Star Festival, but just as Mario arrives at the town, Bowser invades and attacks the Mushroom Kingdom with a fleet of airships. He invites Peach to his creation of his galaxy and removes Peach's castle from its foundations and lifts it into outer space. Mario tries to rescue Princess Peach, but is launched into space by one of Bowser’s minions.</p>
+           <p>He ends up on a small planet, Mario wakes up discovers the  space Princess Rosalina, who is the watcher of the stars, and her star-shaped companions, the Lumas. She uses the Comet Observatory to travel across the universe. However, Bowser has stolen all of the Power Stars that act as the Observatory's power source, rendering it immobile. Bestowed with the power to travel through space through one of the Lumas, Mario sets off on a journey across the universe to reclaim the Power Stars and restore power to Rosalina's observatory so he can save Peach from Bowser.</p>
+        </div> 
+        <button class="accordion">New Super Mario Bros U</button>
+        <div class="panel">
+           <img src="images/New_Super_Mario_Bros._U_box_art.png">
+           <h2>Released: November 18, 2012</h2>
+           <h2>Platform: Wii U</h2>
+           <h2>Plot:</h2>
+           <p>Princess Peach is held captive in her castle by Bowser, Bowser Jr., and the Koopalings who invade and use a giant mechanical arm to throw Mario, Luigi, and two Toads far away. Mario and friends must now travel across this new land returning to Peach's castle in order to save her. 
+        </p>
+        </div> 
+        <button class="accordion">Super Mario 3D World</button>
+        <div class="panel">
+           <img src="images/Super_Mario_3D_World_box_art.jpg">
+           <h2>Released: November 22, 2013</h2>
+           <h2>Platform: Wii U</h2>
+           <h2>Plot:</h2>
+           <p>Mario, Luigi, Peach, and Toad are watching a fireworks show until they find a tilted glass pipe. After Mario and Luigi fix it, a green fairy-like Sprixie princess appears and tells them that Bowser has kidnapped and trapped six other Sprixie princesses in jars. He arrives and captures her before escaping through the pipe, with the heroes subsequently entering it and pursuing him. They find themselves in a realm known as "The Sprixie Kingdom" and set off to find the Sprixies.
+        </p>
+        </div> 
+        <button class="accordion">Super Mario Odyssey</button>
+        <div class="panel">
+           <img src="images/Super_Mario_Odyssey.jpg">
+           <h2>Released: October 27, 2017</h2>
+           <h2>Platform: Nintendo Switch</h2>
+           <h2>Plot:</h2>
+           <p>Bowser kidnaps Princess Peach from the Mushroom Kingdom and takes her aboard his airship, intent on forcibly marrying her. Mario, also aboard, attempts to rescue her but is knocked off the ship by Bowser's hat after a brief fight and falls into the neighboring Cap Kingdom. With Mario gone, Bowser destroys Mario’s cap with his airship. A piece of the hat is grabbed by Cappy, one of the Cap Kingdom's sentient hat-like creatures called Bonneters. The two meet, and he explains to Mario that Bowser also kidnapped his sister, Tiara, to be used as Peach's wedding tiara. Cappy joins Mario and takes the shape of Mario's cap, providing him with the ability to throw his cap and temporarily capture other creatures and objects and utilize their abilities. 
+        </p>
+        </div> 
+        <button class="accordion">Super Mario Bros Wonder</button>
+        <div class="panel">
+           <img src="images/Super_Mario_Bros_Wonder.jpg">
+           <h2>Released: October 20, 2023</h2>
+           <h2>Platform: Nintendo Switch</h2>
+           <h2>Plot:</h2>
+           <p>Mario, Luigi, Princess Peach, Princess Daisy and an entourage of Toads and Yoshis are invited to the neighboring Flower Kingdom by its ruler, Prince Florian, to see a demonstration of a Wonder Flower; great treasures of the Flower Kingdom that can warp reality. Bowser interrupts the ceremony and seizes the Wonder Flower, using its power to merge with Prince Florian's castle, turning himself into a giant flying fortress and imprisoning the citizens of the Flower Kingdom. Mario volunteers to help Prince Florian defeat Bowser and restore order to the land, with his friends following suit. Prince Florian accompanies the party, wearing badges that enhance the group's abilities. </p>
+        </div> 
+        <footer>
+            <p>&copy;2023 Cameron Woodward</p>
+            <a href="site-plan.html">Site Plan</a>
+            <a href="https://en.wikipedia.org/wiki/Super_Mario">Wikipedia</a>
+            <a href="https://mario.nintendo.com">Super Mario Website</a>
+        </footer>
+
+        <script>
+            var acc = document.getElementsByClassName("accordion");
+            var i;
+
+            for (i = 0; i < acc.length; i++) {
+                acc[i].addEventListener("click", function () {
+                    this.classList.toggle("active");
+
+                    var panel = this.nextElementSibling;
+                    if (panel.style.display === "block") {
+                        panel.style.display = "none";
+                    } else {
+                        panel.style.display = "block";
+                    }
+                });
+            }    
+        </script>
+    </div>
 </body>
+
 </html>
