--- a/mario/franchise.html
+++ b/mario/franchise.html
@@ -4,8 +4,98 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    
+    <header>
+        <img id="franchise" src="images/rsz_mario_series_logosvg.png" alt="web site logo">
+        <nav>
+            <a href="index.html">Home Page</a>
+            <a href="history.html">History</a>
+            <a href="franchise.html">Franchise</a>
+        </nav>
+    </header>
+    <h1>Franchise</h1>
+    <p>Here are the main characters in the Super Mario Franchise.</p>
+<main class="home-grid">
+    <section class="Mario">
+        <img src="images/MarioNSMBUDeluxe.png">
+        <h2>Mario</h2>
+        <p>Original Appearance: Donkey Kong (1981)</p>
+        <p>The main hero of the mushroom kingdom</p>
+    </section>
+    <section class="Luigi">
+        <img src="images/Luigi.png">
+        <h2>Luigi</h2>
+        <p>Original Appearance: Mario Bros (1983)</p>
+        <p>The kind, but coward brother of Mario, and a fellow hero to the mushroom kingdom</p>
+    </section>
+    <section class="Peach">
+        <img src="images/Princess_Peach_Stock_Art.png">
+        <h2>Peach</h2>
+        <p>Original Appearance: Super Mario Bros (1985)</p>
+        <p>The beloved Princess of the Mushroom Kingdom</p>
+    </section>
+    <section class="Toad">
+        <img src="images/Toad.webp">
+        <h2>Toad</h2>
+        <p>Original Appearance: Super Mario Bros (1985)</p>
+        <p>A very cheerful and loyal resident of the Mushroom Kingdom who has been on many adventures with Mario and Luigi</p>
+    </section>
+    <section class="Toadette">
+        <img src="images/Toadette.webp">
+        <h2>Toadette</h2>
+        <p>Original Appearance: Mario Kart Double Dash (2003)</p>
+        <p>The unique pink female Toad who has been on a few adventures with Mario</p>
+    </section>
+    <section class="Bowser">
+        <img src="images/Bowser.png">
+        <h2>Bowser</h2>
+        <p>Original Appearance: Super Mario Bros (1985)</p>
+        <p>The King of the Koopas who possesses incredible strength and can breathe fire. He's the main villain of the game who always kidnapps Peach.</p>
+    </section>
+    <section class="Yoshi">
+        <img src="images/Yoshi_artwork_2022.jpeg">
+        <h2>Yoshi</h2>
+        <p>Original Appearance: Super Mario World (1990)</p>
+        <p>Mario's dependable companion who hails from Yoshi's Island and uses his long tongue to gobble up fruit and enemies.</p>
+    </section>
+    <section class="Daisy">
+        <img src="images/Daisy.webp">
+        <h2>Daisy</h2>
+        <p>Original Appearance: Super Mario Land (1989)</p>
+        <p>The cheerful and energetic princess of Sarasaland</p>
+    </section>
+    <section class="Wario">
+        <img src="images/Wario.png">
+        <h2>Wario</h2>
+        <p>Original Appearance: Super Mario Land 2: 6 Golden Coins (1992)</p>
+        <p>The self-professed archrival of Mario who wears purple overalls and a yellow cap and loves garlic and making money</p>
+    </section>
+    <section class="Waluigi">
+        <img src="images/Waluigid.webp">
+        <h2>Waluigi</h2>
+        <p>Original Appearance: Maro Tennis 64 (2000)</p>
+        <p>Wario's pal and accomplice and self-proclaimed rival of Luigi</p>
+    </section>
+    <section class="Rosalina">
+        <img src="images/Roslina.webp">
+        <h2>Rosalina</h2>
+        <p>Original Appearance: Super Mario Galaxy (2007)</p>
+        <p>The watcher of the stars and the adoptive mother of the Lumas who has been on a few adventures with Mario</p>
+    </section>
+    <section class="Bowser.Jr">
+        <img src="images/SMG_BowserJr.webp">
+        <h2>Bowser.Jr</h2>
+        <p>Original Appearance: Super Mario Sunshine (2002)</p>
+        <p>The only son of Bowser, the King of the Koopas</p>
+    </section>
+</main>
+<footer>
+    <p>&copy;2023 Cameron Woodward</p>
+    <a href="site-plan.html">Site Plan</a>
+    <a href="https://en.wikipedia.org/wiki/Super_Mario">Wikipedia</a>
+    <a href="https://mario.nintendo.com">Super Mario Website</a>
+</footer>
 </body>
 </html>
