Completed the personal site

--- a/mario/franchise.html
+++ b/mario/franchise.html
@@ -19,74 +19,74 @@
     <p>Here are the main characters in the Super Mario Franchise.</p>
 <main class="home-grid">
     <section class="Mario">
-        <img src="images/MarioNSMBUDeluxe.png">
         <h2>Mario</h2>
+        <img id="Mario-img" src="images/MarioNSMBUDeluxe.png" alt="Mario">
         <p>Original Appearance: Donkey Kong (1981)</p>
         <p>The main hero of the mushroom kingdom</p>
     </section>
     <section class="Luigi">
-        <img src="images/Luigi.png">
         <h2>Luigi</h2>
+        <img id="Luigi-img" src="images/Luigi.png" alt="Luigi">
         <p>Original Appearance: Mario Bros (1983)</p>
         <p>The kind, but coward brother of Mario, and a fellow hero to the mushroom kingdom</p>
     </section>
     <section class="Peach">
-        <img src="images/Princess_Peach_Stock_Art.png">
         <h2>Peach</h2>
+        <img id="Peach-img" src="images/Princess_Peach_Stock_Art.png" alt="Peach">
         <p>Original Appearance: Super Mario Bros (1985)</p>
         <p>The beloved Princess of the Mushroom Kingdom</p>
     </section>
     <section class="Toad">
-        <img src="images/Toad.webp">
         <h2>Toad</h2>
+        <img id="Toad-img" src="images/Toad.webp" alt="Toad">
         <p>Original Appearance: Super Mario Bros (1985)</p>
         <p>A very cheerful and loyal resident of the Mushroom Kingdom who has been on many adventures with Mario and Luigi</p>
     </section>
     <section class="Toadette">
-        <img src="images/Toadette.webp">
         <h2>Toadette</h2>
+        <img id="Toadette-img" src="images/Toadette.webp" alt="Toadette">
         <p>Original Appearance: Mario Kart Double Dash (2003)</p>
         <p>The unique pink female Toad who has been on a few adventures with Mario</p>
     </section>
-    <section class="Bowser">
-        <img src="images/Bowser.png">
+    <section class="Bowser" alt="Bowser">
         <h2>Bowser</h2>
+        <img id="Bowser-img" src="images/Bowser.png" alt="Bowser">
         <p>Original Appearance: Super Mario Bros (1985)</p>
         <p>The King of the Koopas who possesses incredible strength and can breathe fire. He's the main villain of the game who always kidnapps Peach.</p>
     </section>
     <section class="Yoshi">
-        <img src="images/Yoshi_artwork_2022.jpeg">
         <h2>Yoshi</h2>
+        <img id="Yoshi-img" src="images/rsz_1rsz_yoshi_artwork_2022.jpg" alt="Yoshi">
         <p>Original Appearance: Super Mario World (1990)</p>
         <p>Mario's dependable companion who hails from Yoshi's Island and uses his long tongue to gobble up fruit and enemies.</p>
     </section>
     <section class="Daisy">
-        <img src="images/Daisy.webp">
         <h2>Daisy</h2>
+        <img id="Daisy-img" src="images/800px-Bowser_Jr.png" alt="Daisy">
         <p>Original Appearance: Super Mario Land (1989)</p>
         <p>The cheerful and energetic princess of Sarasaland</p>
     </section>
     <section class="Wario">
-        <img src="images/Wario.png">
         <h2>Wario</h2>
+        <img id="Wario-img" src="images/Wario.png" alt="Wario">
         <p>Original Appearance: Super Mario Land 2: 6 Golden Coins (1992)</p>
         <p>The self-professed archrival of Mario who wears purple overalls and a yellow cap and loves garlic and making money</p>
     </section>
     <section class="Waluigi">
-        <img src="images/Waluigid.webp">
         <h2>Waluigi</h2>
+        <img id="Waluigi-img" src="images/Waluigi.png" alt="Waluigi">
         <p>Original Appearance: Maro Tennis 64 (2000)</p>
         <p>Wario's pal and accomplice and self-proclaimed rival of Luigi</p>
     </section>
     <section class="Rosalina">
-        <img src="images/Roslina.webp">
         <h2>Rosalina</h2>
+        <img id="Rosalina-img" src="images/Rosalina_Super_Mario_Party.png" alt="Rosalina">
         <p>Original Appearance: Super Mario Galaxy (2007)</p>
         <p>The watcher of the stars and the adoptive mother of the Lumas who has been on a few adventures with Mario</p>
     </section>
-    <section class="Bowser.Jr">
-        <img src="images/SMG_BowserJr.webp">
+    <section class="Bowser2">
         <h2>Bowser.Jr</h2>
+        <img id="Bowser2-img" src="images/rsz_bowser2.png" alt="Bowser.Jr">
         <p>Original Appearance: Super Mario Sunshine (2002)</p>
         <p>The only son of Bowser, the King of the Koopas</p>
     </section>
