Fixed my personal site

--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     <a href="mario/index.html">Personal Website</a>
     <a href="mario/site-plan.html">Personal Siteplan</a>
     </nav>
-    <p>Your name Here - WDD130</p>
+    <p>Cameron Woodward - WDD130</p>
 </body>  
 </html>
