--- a/mario/franchise.html
+++ b/mario/franchise.html
@@ -13,6 +13,7 @@
             <a href="index.html">Home Page</a>
             <a href="history.html">History</a>
             <a href="franchise.html">Franchise</a>
+            <a href="finalreport.html">Final Report</a>
         </nav>
     </header>
     <h1>Franchise</h1>
@@ -20,73 +21,73 @@
 <main class="home-grid">
     <section class="Mario">
         <h2>Mario</h2>
-        <img id="Mario-img" src="images/MarioNSMBUDeluxe.png" alt="Mario">
+        <img id="Mario-img" src="images/MarioNSMBUDeluxe.png" alt="image1">
         <p>Original Appearance: Donkey Kong (1981)</p>
         <p>The main hero of the mushroom kingdom</p>
     </section>
     <section class="Luigi">
         <h2>Luigi</h2>
-        <img id="Luigi-img" src="images/Luigi.png" alt="Luigi">
+        <img id="Luigi-img" src="images/Luigi.png" alt="image2">
         <p>Original Appearance: Mario Bros (1983)</p>
         <p>The kind, but coward brother of Mario, and a fellow hero to the mushroom kingdom</p>
     </section>
     <section class="Peach">
         <h2>Peach</h2>
-        <img id="Peach-img" src="images/Princess_Peach_Stock_Art.png" alt="Peach">
+        <img id="Peach-img" src="images/Princess_Peach_Stock_Art.png" alt="image3">
         <p>Original Appearance: Super Mario Bros (1985)</p>
         <p>The beloved Princess of the Mushroom Kingdom</p>
     </section>
     <section class="Toad">
         <h2>Toad</h2>
-        <img id="Toad-img" src="images/Toad.webp" alt="Toad">
+        <img id="Toad-img" src="images/Toad.webp" alt="image4">
         <p>Original Appearance: Super Mario Bros (1985)</p>
         <p>A very cheerful and loyal resident of the Mushroom Kingdom who has been on many adventures with Mario and Luigi</p>
     </section>
     <section class="Toadette">
         <h2>Toadette</h2>
-        <img id="Toadette-img" src="images/Toadette.webp" alt="Toadette">
+        <img id="Toadette-img" src="images/Toadette.webp" alt="image5">
         <p>Original Appearance: Mario Kart Double Dash (2003)</p>
         <p>The unique pink female Toad who has been on a few adventures with Mario</p>
     </section>
     <section class="Bowser" alt="Bowser">
         <h2>Bowser</h2>
-        <img id="Bowser-img" src="images/Bowser.png" alt="Bowser">
+        <img id="Bowser-img" src="images/Bowser.png" alt="image6">
         <p>Original Appearance: Super Mario Bros (1985)</p>
         <p>The King of the Koopas who possesses incredible strength and can breathe fire. He's the main villain of the game who always kidnapps Peach.</p>
     </section>
     <section class="Yoshi">
         <h2>Yoshi</h2>
-        <img id="Yoshi-img" src="images/rsz_1rsz_yoshi_artwork_2022.jpg" alt="Yoshi">
+        <img id="Yoshi-img" src="images/rsz_1rsz_yoshi_artwork_2022.jpg" alt="image7">
         <p>Original Appearance: Super Mario World (1990)</p>
         <p>Mario's dependable companion who hails from Yoshi's Island and uses his long tongue to gobble up fruit and enemies.</p>
     </section>
     <section class="Daisy">
         <h2>Daisy</h2>
-        <img id="Daisy-img" src="images/800px-Bowser_Jr.png" alt="Daisy">
+        <img id="Daisy-img" src="images/800px-Bowser_Jr.png" alt="image8">
         <p>Original Appearance: Super Mario Land (1989)</p>
         <p>The cheerful and energetic princess of Sarasaland</p>
     </section>
     <section class="Wario">
         <h2>Wario</h2>
-        <img id="Wario-img" src="images/Wario.png" alt="Wario">
+        <img id="Wario-img" src="images/Wario.png" alt="image9">
         <p>Original Appearance: Super Mario Land 2: 6 Golden Coins (1992)</p>
         <p>The self-professed archrival of Mario who wears purple overalls and a yellow cap and loves garlic and making money</p>
     </section>
     <section class="Waluigi">
         <h2>Waluigi</h2>
-        <img id="Waluigi-img" src="images/Waluigi.png" alt="Waluigi">
+        <img id="Waluigi-img" src="images/Waluigi.png" alt="image10">
         <p>Original Appearance: Maro Tennis 64 (2000)</p>
         <p>Wario's pal and accomplice and self-proclaimed rival of Luigi</p>
     </section>
     <section class="Rosalina">
         <h2>Rosalina</h2>
-        <img id="Rosalina-img" src="images/Rosalina_Super_Mario_Party.png" alt="Rosalina">
+        <img id="Rosalina-img" src="images/Rosalina_Super_Mario_Party.png" alt="image11">
         <p>Original Appearance: Super Mario Galaxy (2007)</p>
         <p>The watcher of the stars and the adoptive mother of the Lumas who has been on a few adventures with Mario</p>
     </section>
     <section class="Bowser2">
         <h2>Bowser.Jr</h2>
-        <img id="Bowser2-img" src="images/rsz_bowser2.png" alt="Bowser.Jr">
+        <img id="Bowser2-img" src="images/rsz_bowser2.png" alt="image12">
         <p>Original Appearance: Super Mario Sunshine (2002)</p>
         <p>The only son of Bowser, the King of the Koopas</p>
     </section>
