Completed the Website

--- a/mario/index.html
+++ b/mario/index.html
@@ -14,6 +14,7 @@
                 <a href="index.html">Home Page</a>
                 <a href="history.html">History</a>
                 <a href="franchise.html">Franchise</a>
+                <a href="finalreport.html">Final Report</a>
             </nav>
         </header>
         <main class="home-main">
