--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,16 +8,24 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <h1>Welcome to the WDD130 Web Projects</h1>
-    <nav>
-    <a href="aboutme/index.html">About Me Page</a>
-    <a href="wwr/index.html">White Water Rafting Website</a>
-    <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
-    <a href="positioning.html">Positioning Activity</a>
-    <a href="mario/index.html">Personal Website</a>
-    <a href="mario/site-plan.html">Personal Siteplan</a>
-    </nav>
-    <p>Cameron Woodward - WDD130</p>
-</body>  
+    <div id="content">
+
+        <h1>Welcome to the WDD130 Web Projects</h1>
+        <p>Cameron Woodward - WDD130</p>
+        <nav>
+            <a href="aboutme/index.html">About Me Page</a>
+            <a href="wwr/index.html">White Water Rafting Website</a>
+            <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+            <a href="positioning.html">Positioning Activity</a>
+            <a href="mario/index.html">Personal Website</a>
+            <a href="mario/site-plan.html">Personal Siteplan</a>
+        </nav>
+
+        <h1>Website Report</h1>
+        <img id="image" src="images/Image 12-13-23 at 3.07 PM.jpg">
+    </div>
+</body>
+
 </html>
