--- a/mario/history.html
+++ b/mario/history.html
@@ -16,6 +16,7 @@
                 <a href="index.html">Home Page</a>
                 <a href="history.html">History</a>
                 <a href="franchise.html">Franchise</a>
+                <a href="finalreport.html">Final Report</a>
             </nav>
         </header>
         <h2>History</h2>
